syntax = "proto3";
package pb;
option go_package = "internal/pb";

message blank {}

message Category {
  string id = 1;
  string name = 2;
  string description = 3;
}

message CreateCategoryRequest {
  string name = 1;
  string description = 2;
}

message CategoryList {
  repeated Category categories = 1;
}

message CategoryIdRequest {
  string id = 1;
}

service CategoryService {
  rpc CreateCategory(CreateCategoryRequest) returns (Category) {}
  rpc createCategoyStream(stream CreateCategoryRequest) returns (CategoryList) {}
  rpc CreateCategoryStreamBidirectional(stream CreateCategoryRequest) returns (stream Category) {}
  rpc listCategories(blank) returns (CategoryList) {}
  rpc findCategoryById(CategoryIdRequest) returns (Category) {}
}